--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -111,7 +111,9 @@
                                 android:layout_height="wrap_content"
                                 android:text="@string/search"
                                 android:paddingStart="8dp"
-                                android:textSize="18sp"
+                                android:textSize="17sp"
+                                android:gravity="start|center_vertical"
+                                android:layout_gravity="center_vertical|start"
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/white"
                                 android:layout_marginVertical="10dp"
