--- a/app/src/main/res/drawable/rounded_edittext_boarder_bg.xml
+++ b/app/src/main/res/drawable/rounded_edittext_boarder_bg.xml
@@ -2,11 +2,11 @@
 <!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <stroke android:width="2dp" android:color="@color/maroon_light"/>
+    <stroke android:width="2dp" android:color="#5d5b5b"/>
     <solid android:color="#fcfcfc"/>
     <corners
-        android:bottomRightRadius="25dp"
-        android:bottomLeftRadius="25dp"
-        android:topLeftRadius="25dp"
-        android:topRightRadius="25dp"/>
+        android:bottomRightRadius="12dp"
+        android:bottomLeftRadius="12dp"
+        android:topLeftRadius="12dp"
+        android:topRightRadius="12dp"/>
 </shape>
