--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="135dp"
                 android:orientation="vertical"
                 android:id="@+id/headerLayout"
                 android:background="@drawable/maroon_overlay_bg">
@@ -31,17 +31,17 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="48dp"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="26dp"
                         android:id="@+id/backButton"
-                        android:visibility="invisible"
+                        android:visibility="visible"
                         android:src="@drawable/back"/>
 
                     <TextView
                         android:id="@+id/txtWelcome"
-                        android:layout_width="378dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start|center_vertical"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="16dp"
                         android:layout_marginEnd="10dp"
                         android:fontFamily="@font/dubai_font"
                         android:gravity="start|center_vertical"
@@ -50,16 +50,17 @@
                         android:textAlignment="viewStart"
                         android:textColor="@color/white"
                         android:textFontWeight="1000"
-                        android:textSize="25sp"
+                        android:textSize="26sp"
 
                         android:textStyle="bold" />
+
                     <ImageView
                         android:id="@+id/imgHelp"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
                         android:layout_alignParentRight="true"
                         app:srcCompat="@drawable/ic_help"
-                        android:visibility="invisible"
+                        android:visibility="gone"
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="-60dp"
                         android:layout_marginEnd="50dp"/>
@@ -70,7 +71,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginTop="-8dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="8dp"
 
                     android:id="@+id/profileUsername"
                     android:gravity="center_vertical">
@@ -80,8 +82,8 @@
                         android:id="@+id/imgRound"
                         android:layout_marginStart="25dp"
                         android:gravity="center_vertical"
-                        android:layout_marginTop="24dp"
-                        android:layout_marginBottom="20dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
                         android:layout_marginEnd="10dp"
                         android:layout_gravity="center_vertical"
                         android:src="@drawable/user_profile"/>
