--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,5 +34,8 @@
     <color name="setting_font_size_bg">#D1D1D1</color>
     <color name="switch_text_color">#7f7f7f</color>
     <color name="text_color">#333333</color>
+    <color name="faded_text_color">#abaaaa</color>
+    <color name="login_text_color">#5d5b5b</color>
+    <color name="uaepass_text_color">#231f20</color>
 
 </resources>
