1. Bug fixes as on 07/07/2020 1:00pm

--- a/app/src/main/res/drawable/square.xml
+++ b/app/src/main/res/drawable/square.xml
@@ -19,7 +19,7 @@
             <shape
                 android:shape="rectangle" >
                 <solid
-                    android:color="#b71e3e" />
+                    android:color="@color/maroon_light" />
                 <corners android:bottomRightRadius="10dp"
                     android:bottomLeftRadius="10dp"
                     android:topLeftRadius="10dp"
