--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -513,7 +513,9 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="4dp"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
+                    android:textStyle="bold"
+                    android:textFontWeight="1000"
                     android:fontFamily="@font/dubai_font"
                     android:text="@string/signin_as_guest"
                     android:textAlignment="center"
