--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="48dp"
+                        android:paddingStart="3dp"
                         android:layout_marginTop="26dp"
                         android:id="@+id/backButton"
                         android:visibility="visible"
