--- a/app/src/main/res/layout/adapter_map_function_menu.xml
+++ b/app/src/main/res/layout/adapter_map_function_menu.xml
@@ -14,6 +14,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="130dp"
+        android:id="@+id/mapcard"
         android:elevation="10dp"
         app:cardBackgroundColor="#fcfcfc"
         android:layout_margin="10dp"
