--- a/app/src/main/res/layout/adapter_mymap.xml
+++ b/app/src/main/res/layout/adapter_mymap.xml
@@ -12,15 +12,21 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="5dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        app:cardElevation="0dp"
+        android:background="@color/transparent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:cardCornerRadius="20dp"
-        android:layout_margin="5dp">
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp">
     <LinearLayout
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="3dp"
+        android:background="@drawable/mymap_container_bg"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:paddingBottom="9dp"
+        android:paddingTop="4dp"
 
         >
         <LinearLayout
