--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -133,6 +133,7 @@
                         android:src="@drawable/add_512" />
                     <LinearLayout
                         android:layout_width="1dp"
+                        android:id="@+id/bookmarkview"
                         android:layout_height="match_parent"
                         android:background="#80333333"/>
                     <ImageView
